Fixing the bug where the gallery overflows

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -213,7 +213,7 @@ body::-webkit-scrollbar-thumb {
   grid-row-gap: 8px;
   grid-template-columns: repeat(auto-fill, minmax(230px, 1fr));
   grid-auto-rows: 8px;
-  overflow-x: hidden;
+  overflow: hidden;
   position: relative;
 }
 
